opam-version : "2.0"
name : "range"
version: "0.1"
synopsis: "fold on integer range"
description: """
Enable folding on integer range with split capacities
"""
maintainer : "Aldrik KLEBER <contact@aldrik.net>"
authors : "Aldrik KLEBER"
license : "gpl-v3"
homepage : "https://github.com/aldrikfr/range"
bug-reports :"https://github.com/aldrikfr/range/issues"
depends: [ "ocaml" "dune" ]
build: ["dune" "build" "-p" name]
