opam-version : "2.0"
name : "range"
version: "0.3"
synopsis: "Fold on integer range"
description: """
Enable folding on integer range with split capacities
for making distributed computing easier with libraries
like functory
"""
maintainer : "Aldrik KLEBER <contact@aldrik.net>"
authors : "Aldrik KLEBER"
license : "gpl-v3"
homepage : "https://github.com/aldrikfr/range"
dev-repo: "git+https://github.com/aldrikfr/range"
bug-reports :"https://github.com/aldrikfr/range/issues"
depends: [
"ocaml" {>= "4.07.0"}
"ocamlfind"
"dune" ]
build: ["dune" "build"]
