opam-version : "2.0"
name : "range"
version: "0.3"
synopsis: "Fold on integer range"
description: """
Enable folding on integer range with split capacities
for making distributed computing easier with libraries
like functory
"""
maintainer : "Aldrik KLEBER <contact@aldrik.net>"
authors : "Aldrik KLEBER"
license : "gpl-v3"
homepage : "https://github.com/aldrikfr/range"
dev-repo: "git+https://github.com/aldrikfr/range"
bug-reports :"https://github.com/aldrikfr/range/issues"
url {
  src:
    "https://github.com/aldrikfr/range/releases/download/0.3/range-0.3.zip"
  checksum:
  "md5=7f763e8c47e8369274ee400c640532d4"
}
depends: [
"ocaml" {>= "4.01.0"}
"dune" {build}]
build: ["dune" "build" "-j" jobs]
